# Makefile.am - NSIS Files for Gpg4win
# Copyright (C) 2024 g10 Code GmbH
#
# This file is part of GPG4Win.
#
# GPG4Win is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# GPG4Win is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, see <http://www.gnu.org/licenses/>.

EXTRA_DIST = g4wihelp.nsi gpg4win.nsi gpg4win-src.nsi config.nsi.in      \
             Memento.nsh inst-final.nsi                                  \
             inst-sections.nsi installer.nsi installer-finish.nsi        \
             inst-gpg4win.nsi       uninst-gpg4win.nsi                   \
             inst-breeze.nsi             uninst-breeze.nsi               \
             inst-breeze-icons.nsi uninst-breeze-icons.nsi               \
             inst-bzip2.nsi             uninst-bzip2.nsi                 \
             inst-compendium.nsi    uninst-compendium.nsi                \
             inst-extra-cmake-modules.nsi uninst-extra-cmake-modules.nsi \
             inst-freetype.nsi uninst-freetype.nsi                       \
             inst-gettext.nsi       uninst-gettext.nsi                   \
             inst-gnupg-w32.nsi     uninst-gnupg-w32.nsi                 \
             inst-gpg4win-tools.nsi uninst-gpg4win-tools.nsi             \
             inst-gpgex.nsi         uninst-gpgex.nsi                     \
             inst-gpgme-browser.nsi                                      \
             inst-gpgme.nsi         uninst-gpgme.nsi                     \
             inst-gpgmepp.nsi       uninst-gpgmepp.nsi                   \
             inst-qgpgme.nsi        uninst-qgpgme.nsi                    \
             inst-gpgoljs.nsi uninst-gpgoljs.nsi                         \
             inst-gpgol.nsi         uninst-gpgol.nsi                     \
             inst-gpgpass.nsi uninst-gpgpass.nsi                         \
             inst-jpeg.nsi uninst-jpeg.nsi                               \
             inst-karchive.nsi uninst-karchive.nsi                       \
             inst-kbookmarks.nsi uninst-kbookmarks.nsi                   \
             inst-kcalendarcore.nsi uninst-kcalendarcore.nsi             \
             inst-kcodecs.nsi uninst-kcodecs.nsi                         \
             inst-kcolorscheme.nsi uninst-kcolorscheme.nsi               \
             inst-kcompletion.nsi uninst-kcompletion.nsi                 \
             inst-kconfig.nsi        uninst-kconfig.nsi                  \
             inst-kconfigwidgets.nsi uninst-kconfigwidgets.nsi           \
             inst-kcontacts.nsi uninst-kcontacts.nsi                     \
             inst-kcoreaddons.nsi uninst-kcoreaddons.nsi                 \
             inst-kcrash.nsi uninst-kcrash.nsi                           \
             inst-kde-l10n.nsi uninst-kde-l10n.nsi                       \
             inst-kguiaddons.nsi uninst-kguiaddons.nsi                   \
             inst-ki18n.nsi uninst-ki18n.nsi                             \
             inst-kiconthemes.nsi uninst-kiconthemes.nsi                 \
             inst-kio.nsi uninst-kio.nsi                                 \
             inst-kitemmodels.nsi uninst-kitemmodels.nsi                 \
             inst-kitemviews.nsi uninst-kitemviews.nsi                   \
             inst-kjobwidgets.nsi uninst-kjobwidgets.nsi                 \
             inst-kleopatra.nsi         uninst-kleopatra.nsi             \
             inst-kmbox.nsi uninst-kmbox.nsi                             \
             inst-kmime.nsi uninst-kmime.nsi                             \
             inst-kparts.nsi uninst-kparts.nsi                           \
             inst-kservice.nsi uninst-kservice.nsi                       \
             inst-kstatusnotifieritem.nsi uninst-kstatusnotifieritem.nsi \
             inst-ktextwidgets.nsi uninst-ktextwidgets.nsi               \
             inst-kwidgetsaddons.nsi uninst-kwidgetsaddons.nsi           \
             inst-kwindowsystem.nsi uninst-kwindowsystem.nsi             \
             inst-kxmlgui.nsi uninst-kxmlgui.nsi                         \
             inst-libassuan.nsi     uninst-libassuan.nsi                 \
             inst-libgpg-error.nsi      uninst-libgpg-error.nsi          \
             inst-libical.nsi uninst-libical.nsi                         \
             inst-libiconv.nsi      uninst-libiconv.nsi                  \
             inst-libkleo.nsi uninst-libkleo.nsi                         \
             inst-libpng.nsi uninst-libpng.nsi                           \
             inst-mimetreeparser.nsi uninst-mimetreeparser.nsi           \
             inst-okular.nsi uninst-okular.nsi                           \
             inst-openjpeg.nsi uninst-openjpeg.nsi                       \
             inst-paperkey.nsi      uninst-paperkey.nsi                  \
             inst-pcre2.nsi             uninst-pcre2.nsi                 \
             inst-pinentry.nsi      uninst-pinentry.nsi                  \
             inst-pkgconfig.nsi     uninst-pkgconfig.nsi                 \
             inst-poppler.nsi uninst-poppler.nsi                         \
             inst-prison.nsi uninst-prison.nsi                           \
             inst-qrencode.nsi uninst-qrencode.nsi                       \
             inst-qtbase.nsi uninst-qtbase.nsi                           \
             inst-qthttpserver.nsi uninst-qthttpserver.nsi               \
             inst-qtsvg.nsi uninst-qtsvg.nsi                             \
             inst-qttools.nsi uninst-qttools.nsi                         \
             inst-qttranslations.nsi uninst-qttranslations.nsi           \
             inst-qtwebsockets.nsi uninst-qtwebsockets.nsi               \
             inst-scute.nsi uninst-scute.nsi                             \
             inst-solid.nsi uninst-solid.nsi                             \
             inst-sonnet.nsi uninst-sonnet.nsi                           \
             inst-threadweaver.nsi uninst-threadweaver.nsi               \
             inst-tiff.nsi uninst-tiff.nsi                               \
             inst-zlib.nsi              uninst-zlib.nsi                  \
             inst-zstd.nsi uninst-zstd.nsi
